--- a/Facebook.html
+++ b/Facebook.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Beginners frontend class</title>
+  <!-- link to CSS external-->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
